[package]
name = "rostdown"
description = "A kramdown-compatible Markdown renderer (GFM-flavored subset) producing byte-identical HTML; Rost is German for rust, the way Kram is German for stuff"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/momiji-rs/rostdown"
readme = "README.md"
authors = ["rubyrs contributors"]
keywords = ["markdown", "kramdown", "html", "gfm"]
categories = ["text-processing", "parser-implementations"]

[features]
# Opt-in scoped bump allocator (see src/arena.rs). Off by default keeps
# the crate zero-dep, `unsafe`-free, and zero-overhead. An embedder that
# enables it must also install `rostdown::ScopedAlloc` as its
# `#[global_allocator]`; `to_html` then bump-allocates its AST and copies
# the result out before resetting.
arena = []
# Exposes `profile_phases` (parse-vs-convert split timing) for benchmarks.
# Diagnostic only; not part of the public API.
profiling = []
# Opt-in SIMD byteset (NEON on aarch64) for the inline parser's trigger
# scan. Adds `unsafe`; default stays unsafe-free with a scalar table.
simd = []

[dependencies]

# Thin LTO recovers a few percent on the examples/benchmarks; no effect
# on dev/test builds.
[profile.release]
lto = "thin"
